--- a/home/Templates/login.html
+++ b/home/Templates/login.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h5>Login</h5>
-    <form action="" method="POST">
+  <head>
+    {% load static %}
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <h5>Login</h5>
+      <form action="" method="POST">
         {% csrf_token %}
-        <input type="text" name="username">
-        <input type="text" name="password">
-        <input type="submit" name="login"/>
-    </form>
-</body>
+        <input type="text" name="username" />
+        <input type="text" name="password" />
+        <input type="submit" name="login" />
+      </form>
+    </div>
+  </body>
 </html>
