--- a/home/Templates/regiter.html
+++ b/home/Templates/regiter.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h5>Regiter</h5>
-    <form action="" method="POST">
-    {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" name="create user"/>
-    </form>
-</body>
+  <head>
+    {% load static %}
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Register</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/register.css' %}" />
+    <style>
+      .container-fluid {
+        background-image: url("{% static 'media/background.png' %}");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="layout">
+        <div class="form-container">
+          <h1 class="title">Register Booking App</h1>
+          <form action="" method="POST">
+            {% csrf_token %}
+            <div class="form-provider">
+              <div class="form-input">
+                <input
+                  type="text"
+                  placeholder="User name"
+                  id="username"
+                  name="username"
+                />
+              </div>
+              <div class="form-input">
+                <input
+                  type="password"
+                  placeholder="Password"
+                  id="password"
+                  name="password"
+                />
+              </div>
+              <div class="sign-in">
+                Already have an account?
+                <a class="sign-in" href="/login"> Sign in</a>
+              </div>
+              <button
+                class="btn btn-success btn-custom"
+                type="submit"
+                name="register"
+              >
+                Register
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
