map register page

--- a/home/Templates/regiter.html
+++ b/home/Templates/regiter.html
@@ -33,10 +33,42 @@
               </div>
               <div class="form-input">
                 <input
+                  type="email"
+                  placeholder="Email"
+                  id="email"
+                  name="email"
+                />
+              </div>
+              <div class="form-input">
+                <input
+                  type="text"
+                  placeholder="First name"
+                  id="first_name"
+                  name="first_name"
+                />
+              </div>
+              <div class="form-input">
+                <input
+                  type="text"
+                  placeholder="Last name"
+                  id="last_name"
+                  name="last_name"
+                />
+              </div>
+              <div class="form-input">
+                <input
                   type="password"
                   placeholder="Password"
-                  id="password"
-                  name="password"
+                  id="password1"
+                  name="password1"
+                />
+              </div>
+              <div class="form-input">
+                <input
+                  type="password"
+                  placeholder="Password"
+                  id="password2"
+                  name="password2"
                 />
               </div>
               <div class="sign-in">
