--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -15,7 +15,7 @@
         <h1>Booking App</h1>
         <div class="box-linear-secondary">
           <p>Hello</p>
-          <h3>Nguyen Dinh Tien</h3>
+          <h3>{{ username }}</h3>
         </div>
       </header>
       <main class="d-flex flex-column">
