--- a/home/Templates/login.html
+++ b/home/Templates/login.html
@@ -39,8 +39,8 @@
                   name="password"
                 />
               </div>
-              <div class="form-input">
-                <a class="forget-password">Forget password?</a>
+              <div>
+                {{ message  }}
               </div>
               <div class="sign-in">
                 New to booking app?
