--- a/home/Templates/booking_detail.html
+++ b/home/Templates/booking_detail.html
@@ -9,7 +9,7 @@
     <h1>Chi Tiết Booking</h1>
 
     <p>Booking ID: {{ booking.booking_id }}</p>
-    <p>Người Dùng: {{ booking.user.username }}</p>
+    <p>Người Dùng: {{ booking.user.name }}</p>
     <p>Mã Khách Sạn: {{ booking.hotelID }}</p>
     <p>Ngày Booking: {{ booking.date_booking }}</p>
     <p>Ngày Trả Phòng: {{ booking.date_return }}</p>
