--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -12,7 +12,19 @@
     <div class="w-100">
       {% comment %}========== Header ============{% endcomment %}
       <header class="box-linear-primary">
-        <h1>Booking App</h1>
+        <div class="w-100 d-flex justify-content-between align-items-center">
+          <h1>Booking App</h1>
+          <div
+            style="background-color: #fff"
+            class="d-inline-flex justify-content-center align-items-center p-2 rounded-4"
+          >
+            <a
+              href="/search"
+              class="d-inline-flex justify-content-center align-items-center"
+              ><img src="{% static 'icon/search-normal.svg' %}"
+            /></a>
+          </div>
+        </div>
         <div class="box-linear-secondary">
           <p>Hello</p>
           <h3>{{ username }}</h3>
