--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -14,6 +14,7 @@
       <header class="box-linear-primary">
         <div class="w-100 d-flex justify-content-between align-items-center">
           <h1>Booking App</h1>
+          <div class="d-flex align-items-center gap-2">
           <div
             style="background-color: #fff"
             class="d-inline-flex justify-content-center align-items-center p-2 rounded-4"
@@ -24,6 +25,17 @@
               ><img src="{% static 'icon/search-normal.svg' %}"
             /></a>
           </div>
+          <div
+            style="background-color: #fff"
+            class="d-inline-flex justify-content-center align-items-center p-2 rounded-4"
+          >
+            <a
+              href="/logout"
+              class="d-inline-flex justify-content-center align-items-center"
+              ><img style="width:24px;height:24px" src="{% static 'icon/log-out-icon.png' %}"
+            /></a>
+          </div>
+        </div>
         </div>
         <div class="box-linear-secondary">
           <p>Hello</p>
