--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,10 +1,10 @@
+*,
+a {
+  text-decoration: none;
+}
+
 .box-linear-primary {
-  background: linear-gradient(
-    180deg,
-    #00a55d 0%,
-    #66ba7a 44.13%,
-    rgba(165, 207, 6, 0) 96.29%
-  );
+  background: linear-gradient(180deg, #00a55d 0%, #66ba7a 44.13%, rgba(165, 207, 6, 0) 96.29%);
   padding: 40px 16px;
   display: flex;
   flex-direction: column;
@@ -12,8 +12,7 @@
 }
 
 .box-linear-secondary {
-  box-shadow: 15.433333396911621px -15.433333396911621px 15.433333396911621px 0px
-    #bdbdbd3b inset;
+  box-shadow: 15.433333396911621px -15.433333396911621px 15.433333396911621px 0px #bdbdbd3b inset;
   background: #ffffff33;
   width: 343px;
   padding: 10px 15px 16px 10px;
@@ -21,7 +20,7 @@
 }
 
 h1 {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 26px;
   font-weight: 600;
   line-height: 24px;
@@ -32,7 +31,7 @@ h1 {
 
 .box-linear-secondary h3,
 .box-linear-secondary p {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
@@ -72,7 +71,7 @@ h1 {
 }
 
 .category-see-all {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
@@ -81,7 +80,7 @@ h1 {
   color: #00a55d;
 }
 .category-title {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 24px;
   font-weight: 600;
   line-height: 28px;
@@ -101,11 +100,7 @@ h1 {
   width: 100%;
   height: 151px;
   border-radius: 24px;
-  background: linear-gradient(
-    180deg,
-    rgba(102, 186, 122, 0.2) 0%,
-    rgba(74, 150, 122, 0) 100%
-  );
+  background: linear-gradient(180deg, rgba(102, 186, 122, 0.2) 0%, rgba(74, 150, 122, 0) 100%);
   overflow: hidden;
 }
 .hotel-image img {
@@ -115,7 +110,7 @@ h1 {
 }
 
 .hotel-detail .hotel-name {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 18px;
   font-weight: 600;
   line-height: 23px;
@@ -129,7 +124,7 @@ h1 {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
@@ -139,7 +134,7 @@ h1 {
 }
 
 .hotel-price {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 16px;
   font-weight: 600;
   line-height: 18px;
